--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ngx-color-picker": "^6.5.0",
+    "ngx-font-picker": "^6.4.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
