Setup textstyles.  Setup textObjects.  Setup jsPDF, HTML2CANVAS.  Setup slide editor control panel.

--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/jspdf": "^1.1.31",
     "angular-font-awesome": "^3.1.2",
+    "angular2-draggable": "^2.0.0-beta.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.4.1",
     "ngx-color-picker": "^6.5.0",
     "ngx-font-picker": "^6.4.0",
     "rxjs": "^6.0.0",
