--- a/client/angular.json
+++ b/client/angular.json
@@ -23,9 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/angular2-draggable/css/resizable.min.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jspdf/dist/jspdf.min.js",
+              "./node_modules/html2canvas/dist/html2canvas.min.js"]
           },
           "configurations": {
             "production": {
