--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-color-picker": "^6.5.0",
     "ngx-font-picker": "^6.4.0",
+    "node-gyp": "^3.8.0",
+    "rebuild": "^0.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
