--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas-render-offscreen": "0.0.3",
     "jspdf": "^1.4.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-color-picker": "^6.5.0",
