Experimented with jquery

--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,10 @@
               "node_modules/angular2-draggable/css/resizable.min.css"
             ],
             "scripts": ["./node_modules/jspdf/dist/jspdf.min.js",
-              "./node_modules/html2canvas/dist/html2canvas.min.js" ]
+              "./node_modules/html2canvas/dist/html2canvas.min.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jqueryui/jquery-ui.min.js"
+            ]
           },
           "configurations": {
             "production": {
