--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/jqueryui": "^1.12.6",
     "@types/jspdf": "^1.1.31",
     "angular-font-awesome": "^3.1.2",
     "angular2-draggable": "^2.0.0-beta.2",
@@ -27,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
     "html2canvas-render-offscreen": "0.0.3",
+    "jquery": "^3.3.1",
     "jspdf": "^1.4.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-color-picker": "^6.5.0",
@@ -48,6 +50,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jqueryui": "^1.11.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
