--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.8",
     "nodemon": "^1.18.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "router": "^1.3.3"
   }
 }
