--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "build": "cd client && ng build --prod"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.7.1"
   },
   "author": "",
   "license": "ISC",
