--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,8 @@
               "node_modules/angular2-draggable/css/resizable.min.css"
             ],
             "scripts": ["./node_modules/jspdf/dist/jspdf.min.js",
-              "./node_modules/html2canvas/dist/html2canvas.min.js" ]
+              "./node_modules/html2canvas/dist/html2canvas.min.js",
+            "./node_modules/caman/dist/caman.js"]
           },
           "configurations": {
             "production": {
