--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/jspdf": "^1.1.31",
     "angular-font-awesome": "^3.1.2",
     "angular2-draggable": "^2.0.0-beta.2",
+    "caman": "^4.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
