--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "angular2-draggable": "^2.0.0-beta.2",
     "caman": "^4.1.2",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.9",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
     "html2canvas-render-offscreen": "0.0.3",
