--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,6 @@
-FIREBASE_API_KEY=
+FIREBASE_API_KEY= 
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+SERVICE_ACCOUNT_PRIVATE_KEY =
 AUTH_SECRET=
