--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "build": "cd client && ng build --prod"
   },
   "engines": {
-    "node": "8.11.4",
+    "node": "8.9.4",
     "npm": "6.2.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^2.3.1",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "firebase": "^5.6.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.8",
