--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "cd client && ng build --prod"
+    "start": "node index.js"
   },
   "engines": {
     "node": "8.11.1",
